modified chapter Input files

--- a/0-DivaHeader2012.tex
+++ b/0-DivaHeader2012.tex
@@ -209,9 +209,9 @@ literate={\$}{{\textcolor{red}{\$}}}1
 \newcommand{\intermediate}{$\star\star$}
 \newcommand{\expert}{$\star\star\star$}
 
-\newcommand{\directory}{\texttt}
+\newcommand{\directory}[1]{\texttt{\color{ForestGreen}{#1}}}
 \newcommand{\file}[1]{\texttt{\color{MidnightBlue}{#1}}}
-\newcommand{\command}{\textsf}
+\newcommand{\command}[1]{\texttt{\color{RawSienna}{#1}}}
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
