--- a/10-DivaPreprocessing.tex
+++ b/10-DivaPreprocessing.tex
@@ -159,7 +159,7 @@ Put the \texttt{.asc} file into \texttt{divastripped/input/} with the name \text
 \subsection{Method 3: interpolation of individual topography measurements\label{sec:topotopex}}
 %-------------------------------------------------------------------------
 
-The principle of this method is to apply a \diva\divaspace analysis to a data file containing depths at various locations.
+The principle of this method is to apply a \diva analysis to a data file containing depths at various locations.
 
 \subsubsection{Get topography measurements}
 %------------------------------------------
@@ -177,7 +177,7 @@ In the present example data points are extracted from \url{http://topex.ucsd.edu
 \subsubsection{Adapt parameters}
 %-------------------------------
 
-As in any \diva\divaspace analysis, you need to provide parameters concerning the analysis itself and the output grid (file \texttt{param.par}, described extensively in Sec. \ref{sec:param.par}, page \pageref{sec:param.par}). 
+As in any \diva analysis, you need to provide parameters concerning the analysis itself and the output grid (file \texttt{param.par}, described extensively in Sec. \ref{sec:param.par}, page \pageref{sec:param.par}). 
 
 \begin{itemize}
 \item Correlation length is chosen according to the resolution of the gridded topography you extracted, \textit{i.e.} the distance between two measurements.
