--- a/18-divademecum.tex
+++ b/18-divademecum.tex
@@ -1,6 +1,8 @@
 \chapter{VADEMECUM}
 
 
+The DIVADEMECUM is a four-page summary of the commands and the input/output files you have to deal with when using \diva.
+
 \minitoc
 
 
@@ -11,7 +13,7 @@
 %\vspace*{-1cm}
 \begin{table}[H]
 \centering
-\caption{DIVADEMECUM: \diva in- and outputs. When not specified differently, input files are from directory  {\tt ./input} and 
+\caption[DIVADEMECUM: \diva input and output files]{DIVADEMECUM: \diva in- and outputs. When not specified differently, input files are from directory  {\tt ./input} and 
 output files are placed in directory {\tt ./output}. Script {\tt divarefe} takes the same inputs as {\tt divacalc}
 while {\tt divaanom} and {\tt divasumup} use no other user-provided files than the other scripts. Brackets {\tt [ ]} enclose optional files or parameters. Ex. {\tt [-r]} will replace an input file by the outputs from the scripts.\label{vdm}}
 
@@ -377,7 +379,7 @@ while {\tt divaanom} and {\tt divasumup} use no other user-provided files than t
 \begin{figure}[H]
 \centering
 \includegraphics[width=1.25\textwidth,angle=90]{divademecum}
-\caption{Scripts used in the command-line version of \diva; optional arguments are between {\tt []}.}
+\caption[Scripts used in the command-line version of \diva.]{Scripts used in the command-line version of \diva; optional arguments are between {\tt []}.}
 \end{figure}
 
 %\pagebreak
