--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -1,4 +1,4 @@
-\chapter{\diva\divaspace general theory\label{chaptheory}}
+\chapter{\diva general theory\label{chaptheory}}
 
 
 \lettrine[lines=2, loversize=-0.1, lraise=0.1]{T}{his} chapter describes the theory behind the \diva interpolation method. 
@@ -441,7 +441,8 @@ In an infinite domain, the correlation function was shown to be proportional to 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=.75\textwidth]{singlepointanalysis}
+\includegraphics[width=.75\textwidth,bb=148 269 507 577]{results_test1}
+%%\includegraphics[width=.75\textwidth]{singlepointanalysis}
 \caption{Analysis of a single data point with high signal-to-noise ration and no background field.\label{singleanalysis}}
 \end{figure}
 
