--- a/6-DivaParameters.tex
+++ b/6-DivaParameters.tex
@@ -332,7 +332,7 @@ In practice, in \diva, the relative weights can be retrieved by $w_i=\mu_i/\bar{
 the average $\bar{\hphantom{\mu}}$ is a harmonic mean. The minimisation and the optimum for $\lambda$ are the same, even if the weights provided by the user do not satisfy the condition \eqref{eq:condition}. However the interpretation of $\Theta$, $\noise$ and $\sigma$ might be different.
 
 
-\subsubsection{\diva\divaspace GCV}
+\subsubsection{\diva GCV}
 
 In \diva, the matrix $\matr{A}$ is not explicitly constructed, but the product $\matr{A} \vect{x}$ consists simply in the application of the analysis in data locations.
 
