--- a/DivaUserGuide2012.tex
+++ b/DivaUserGuide2012.tex
@@ -26,7 +26,7 @@
 %---------------------------PART 1------------------
 
 \thispagestyle{empty}
-\part{\diva\divaspace Theory}
+\part{\diva Theory}
 
 \input{5-DivaTheory}
 \input{6-DivaParameters}
