added missing figure

--- a/4-DivaInstallation2.tex
+++ b/4-DivaInstallation2.tex
@@ -158,7 +158,7 @@ In the main working directory (\directory{GODIVA\_07\_2012/DIVA3D/divastripped})
 ...
 [charles@gher13 divastripped]$ ncview output/ghertonetcdf/results.nc
 \end{lstlisting}
-The results you obtain has to be similar to those of Fig.~\ref{fig:diva_test_results}.
+The results you obtain have to be similar to those of Fig.~\ref{fig:diva_test_results}.
 
 \begin{figure}[H]
 \centering 
