--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -1,7 +1,7 @@
 \chapter{\diva general theory\label{chaptheory}}
 
 
-\lettrine[lines=2, loversize=-0.1, lraise=0.1]{T}{his} chapter describes the theory behind the \diva interpolation method. 
+This chapter describes the theory behind the \diva interpolation method and compares it with the Optimal Interpolation. 
 
 \minitoc
 
